--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "nodemon ./src/index.ts",
-    "compile": "tsc",
+    "generate": "graphql-codegen --config codegen.ts && bash scripts/makeResolversStrict.sh",
+    "compile": "npm run generate && tsc",
     "start-prod": "pnpm run compile && node ./dist/index.js",
     "ts:check": "tsc --noEmit",
     "lint": "eslint src/**/*.ts",
@@ -20,9 +21,13 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "graphql-modules": "^2.3.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -30,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
+    "graphql-codegen-typescript-common": "0.18.2",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
     "prettier-plugin-organize-imports": "^3.2.4",
