--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "esModuleInterop": true,
     "types": ["node"],
     "strict": true
-  }
+  },
+  "exclude": ["node_modules", "dist", "src/generated/graphql.ts"]
 }
