--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
-    "lib": ["ES2022"], // ES2020 in earlier versions
-    "module": "ES2022", //ESNext
-    "moduleResolution": "Node",
-    "target": "ES2022", // ES2020 in earlier versions
-    "esModuleInterop": true
+    "rootDirs": ["src"],
+    "outDir": "dist",
+    "lib": ["es2020"],
+    "target": "es2020",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "types": ["node"],
+    "strict": true
   },
-  "exclude": ["node_modules", "dist"],
-  "include": ["src/**/*.ts", "index.ts"]
+  "exclude": ["node_modules", "dist", "src/generated/graphql.ts"]
 }
