--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "type": "module",
   "scripts": {
     "start": "tsx watch index.ts",
-    "generate": "graphql-codegen --config codegen.ts && bash scripts/makeResolversStrict.sh",
-    "start-prod": "pnpm run generate && tsx index.ts",
-    "ts:check": "tsc --noEmit",
+    "generate:graphql": "graphql-codegen --config codegen.ts && bash scripts/makeResolversStrict.sh",
+    "generate:supabase": "supabase gen types typescript --project-id 'mncmkeesizmphvqylfqr' --schema public > src/generated/supabase.ts",
+    "generate": "pnpm run generate:graphql && pnpm run generate:supabase",
+    "start:prod": "pnpm run generate && tsx index.ts",
+    "check:ts": "tsc --noEmit",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "check": "pnpm run ts:check && pnpm run format && pnpm run lint"
+    "check": "pnpm run check:ts && pnpm run format && pnpm run lint",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@supabase/supabase-js": "^2.39.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "date-fns": "^3.0.6",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "graphql-modules": "^2.3.0"
@@ -38,6 +43,7 @@
     "prettier": "^3.1.1",
     "prettier-plugin-organize-imports": "^3.2.4",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.1"
   }
 }
