--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "types": ["node"],
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
-  "exclude": ["node_modules", "dist", "src/generated/graphql.ts"]
+  "exclude": ["node_modules/**", "dist", "src/generated/graphql.ts"]
 }
