--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@apollo/server": "^4.9.5",
     "@supabase/supabase-js": "^2.39.2",
+    "@total-typescript/ts-reset": "^0.5.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^3.0.6",
